@@ -20,7 +20,8 @@
             <h3>Title: <%= title[index] %></h3>
             <p>Description: <%= description[index] %></p>
             <h4>Due Date: <%= dueDate[index] %></h4>
-            <a href="">View submissions <%= IDarray[index] %></a>
+            <h4>Branch: <%= branch[index] %>, Semester: <%= semester[index] %></h4>
+            <a href=<%= "view-submissions/" + IDarray[index].toString() %> >View submissions <%= IDarray[index] %></a>
         <% } %>
     </body>
 </html>
